# Camera-Dev

./: README.md
Code/: .cproject  .mxproject  Camera.ioc
Code/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Code/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Code/RUST/camera-board/: Cargo.toml  Embed.toml
Code/RUST/stm32f446-test/: Cargo.toml  memory.x
Code/RUST/stm32f446-test/.cargo/: config.toml
Code/RUST/stm32f446-test/src/: main.rs
Code/USB_HOST/App/: usb_host.c
Libs/Kicad/2pin_Picoblade/: 53047-0210.bak  53047-0210.kicad_sym  MOLEX_53047-0210.kicad_mod
Libs/Kicad/3pin_Picoblade/: 530470310.kicad_sym  MOLEX_530470310.kicad_mod
Libs/Kicad/74AHCT1G08W5_7/: 2024-08-31_00-04-52.kicad_sym
Libs/Kicad/74LVC1404/: 74LVC1404.kicad_sym
Libs/Kicad/ABLS2_14_31818MHZ_D4Y_T/: ABLS2-14.31818MHZ-D4Y-T.kicad_sym  XTAL_ABLS2-14.31818MHZ-D4Y-T.kicad_mod
Libs/Kicad/HDMI_10029449_111RLF/: 10029449-111RLF.kicad_sym  (+1 more)
Schematics/: Camera_BOM.csv
Schematics/Camera/: Camera.kicad_pcb  Camera.kicad_prl  Camera.kicad_pro  Camera.kicad_sch  Display.kicad_sch  MCU.kicad_sch  MCU_OSC.kicad_sch  Power.kicad_sch  Power.kicad_sch-bak  audio_filters.kicad_sch  camera_interface.kicad_sch  camera_interface.kicad_sch-bak  eth.kicad_sch  fp-info-cache  fp-lib-table  frame_buffer.kicad_sch  freerouting.dsn  hdmi.kicad_sch  memory.kicad_sch  mic_clocks.kicad_sch  microphone_interface.kicad_sch  osd_ctrl.kicad_sch  sym-lib-table  temp-freerouting.dsn  usb.kicad_sch  user_io.kicad_sch
Sims/: Draft1.asc  Draft1.raw  PoR.asc  PoR.op.raw  PoR.raw
(+56 files in other folders)
