[package]
name = "stm32f446-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers", "task-arena-size-32768"] }
embassy-stm32 = { version = "0.1.0", features = ["chrono", "defmt", "exti", "memory-x", "stm32f446re", "time-driver-any"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rtt-target = "0.5.0"
